--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,28 +16,26 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Descargar el repositorio
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # 2. Configurar Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '20'
 
-      # 3. Instalar dependencias
       - name: Install dependencies
         run: npm install
 
-      # 4. Construir el sitio (Vite genera dist/)
       - name: Build site
         run: npm run build
 
-      # 5. Publicar dist/ en GitHub Pages
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
-          force: true   # <--- fuerza la creación de la rama gh-pages
+          publish_branch: gh-pages
+          force_orphan: true       # <-- crea la rama gh-pages desde cero
+          user_name: "github-actions"
+          user_email: "github-actions@github.com"
